
  * Make okular-dev and libksane-dev depend on ${sameVersionDep:kdelibs5-dev}
    instead of kdelibs5-dev (>= ${source:Upstream-Version}).

  +++ Changes by Ana Beatriz Guerrero Lopez:

  * Update install files.

  +++ Changes by Pino Toscano:

  * Suggest texlive-base-bin for okular, so the DVI backed can use TeX fonts.

  +++ Changes by David Palacio

  * Copyright review.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 25 Jan 2009 16:45:31 -0500

kdegraphics (4:4.1.3-1) experimental; urgency=low

  * New upstream release 
    - bump build-deps.
    - kgamma docs in kgamma

 -- Sune Vuorela <debian@pusling.com>  Sat, 01 Nov 2008 15:05:16 +0100

kdegraphics (4:4.1.2-1) experimental; urgency=low

  * New upstream release.

  +++ Changes by Pino Toscano:

  * okular.mime:
  * okular-extra-backends.mime:
    + add mailcap entries for PDF, PS, DVI, DjVu, TIFF. (Closes: #495802)
  * okular-extra-backends.lintian:
    + silent warnings about missing application referenced in .desktop files,
      as the executable is in the okular package.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 02 Oct 2008 20:14:23 +0200

kdegraphics (4:4.1.1-1) experimental; urgency=low

  * New upstream release

  +++ Changes by Pino Toscano:

  * Make okular-extra-backends provide the virtual package djvu-viewer.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 03 Jun 2008 11:30:16 +0200

kdegraphics (4:4.1.0-1) experimental; urgency=low

  * New upstream release.
  * Remove 97_fix_target_link_libraries, no longer needed. At least, no
    currently.
  * Update installed files in gwenview.install.
  * Bump shlibs version of libokularcore1 to 4:4.1.0.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Sun, 27 Jul 2008 01:26:27 +0200

kdegraphics (4:4.0.98-1) experimental; urgency=low

  * New upstream release, Release Candidate 1.
  * Bump shlibs version of libokularcore1 to 4:4.0.98.