@@ -39,6 +39,10 @@ kdegraphics (4:4.2.0-0r1) UNRELEASED; urgency=low
 
   * Copyright review.
 
+  +++ Changes by Sune Vuorela:
+
+  * Don't put kdebase-runtime in dependencies of lib packaging
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 25 Jan 2009 16:45:31 -0500
 
 kdegraphics (4:4.1.3-1) experimental; urgency=low
